# muninn

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/DISCUSSION_TEMPLATE/: sigma-detection-ideas.yml
.github/ISSUE_TEMPLATE/: config.yml  sigma-rule-request.yml  sigma-rule-submission.yml
.github/PULL_REQUEST_TEMPLATE/: sigma_rule.md
.github/workflows/: release.yml  sigma-validation.yml
examples/: quickstart.sh
examples/logs/: firewall.csv  sysmon_events.json  windows_events.xml  windows_security.json
examples/rules/: account_creation.yml  certutil_download.yml  encoded_powershell.yml  ssh_brute_force.yml  whoami_execution.yml
scripts/: build-rulesets.sh  validate_sigma.py
sigma_rules/: CONTRIBUTING.md  README.md  SOURCES.md
sigma_rules/network/dns/: net_dns_apt_phantomcore_ngrok_c2.yml
sigma_rules/network/firewall/: net_firewall_ssh_non_standard_port.yml
sigma_rules/network/proxy/: proxy_post_short_uri.yml
sigma_rules/network/threat_actor/: net_apt_headmare_c2_ip.yml
sigma_rules/templates/: README.md  cloud_aws.yml  cve_exploit.yml  linux_process.yml  network_zeek.yml  powershell_windows.yml  process_creation_windows.yml  registry_windows.yml  threat_actor.yml
sigma_rules/windows/image_load/: image_load_win_unsigned_from_temp.yml
sigma_rules/windows/network_connection/: net_connection_external_ip.yml  net_connection_win_ssh_non_standard.yml
sigma_rules/windows/process_creation/: proc_creation_win_ad_recon_bloodhound_sharphound.yml  proc_creation_win_apt_phantomcore_discovery_commands.yml  proc_creation_win_apt_phantomcore_ngrok_tunneling.yml  proc_creation_win_apt_phantomcore_phantomdl_execution.yml  proc_creation_win_apt_phantomcore_schtask_persistence.yml  proc_creation_win_apt_phantomcore_shadow_copy_deletion.yml  proc_creation_win_apt_phantomcore_sliver_c2_beacon.yml  proc_creation_win_apt_phantomcore_winrar_cve_2023_38831.yml  proc_creation_win_archive_exploit_temp.yml  proc_creation_win_archive_password_exfil_staging.yml  proc_creation_win_archive_sensitive_data.yml  proc_creation_win_browser_credential_theft_tools.yml  proc_creation_win_c2_frameworks_execution.yml  proc_creation_win_cloud_cli_exfiltration.yml  proc_creation_win_credential_recovery_tools.yml  (+18 more)
src/: anomaly.rs  correlate.rs  diff.rs  download.rs  ioc.rs  lib.rs  live.rs  login.rs  mitre.rs  opentip.rs  scoring.rs  summary.rs  timeline.rs  transforms.rs  tui.rs
src/hunt/: commandline.rs  dns.rs  file_access.rs  image.rs  mod.rs  parent.rs  registry.rs  tactic.rs
src/model/: mod.rs
src/output/: gui.rs  mod.rs  templates.rs
src/parsers/: archive.rs  auditd.rs  cef.rs  csv_tsv.rs  evtx.rs  flatten.rs  json.rs  leef.rs  macos.rs  mod.rs  syslog.rs  text.rs  w3c.rs  xml.rs  zeek.rs
src/search/: mod.rs
src/sigma/: compiler.rs  filter.rs  mod.rs  parser.rs
tests/: end_to_end.rs  parsers.rs  search_engine.rs
(+19 files in other folders)
