[package]
name = "muninn"
version = "0.3.0"
edition = "2021"
description = "Muninn — memory of Corax. High-performance log parsing, SIGMA detection, and search engine. Parses 15+ log formats (EVTX, JSON, Syslog, CEF, LEEF, Zeek, W3C, Auditd, XML, etc.) with built-in SIGMA YAML compiler and SQLite-backed search. One binary, zero dependencies."
license = "AGPL-3.0-only"
keywords = ["sigma", "siem", "evtx", "security", "log-parsing", "corax"]
categories = ["parsing", "database"]
repository = "https://github.com/corax-security/muninn"

[lib]
name = "muninn"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "muninn"
path = "src/bin/muninn.rs"
required-features = ["cli"]

[features]
default = ["all-parsers"]
cli = ["dep:clap", "dep:colored", "dep:indicatif", "dep:env_logger"]
python = ["dep:pyo3"]
all-parsers = ["parser-evtx", "parser-syslog", "parser-cef", "parser-leef", "parser-zeek", "parser-w3c"]
parser-evtx = ["dep:evtx"]
parser-syslog = []
parser-cef = []
parser-leef = []
parser-zeek = []
parser-w3c = []
archive = ["dep:flate2", "dep:zip", "dep:bzip2", "dep:tar", "dep:tempfile"]
download = ["dep:ureq", "dep:zip"]
ioc-enrich = ["dep:ureq"]
tui = ["dep:ratatui", "dep:crossterm"]
live = ["dep:notify"]

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
log = "0.4"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"

# SQLite engine
rusqlite = { version = "0.31", features = ["bundled", "functions", "backup"] }

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Base64 for SIGMA modifiers
base64 = "0.22"

# Parallelism
rayon = "1.10"

# Format-specific parsers
evtx = { version = "0.8", optional = true }
csv = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
serde_yaml = "0.9"

# CLI (optional)
clap = { version = "4", features = ["derive"], optional = true }
colored = { version = "2", optional = true }
indicatif = { version = "0.17", features = ["rayon"], optional = true }
env_logger = { version = "0.11", optional = true }

# Python bindings (optional)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

# Archive support (optional)
flate2 = { version = "1", optional = true }
zip = { version = "2", optional = true }
bzip2 = { version = "0.5", optional = true }
tar = { version = "0.4", optional = true }
tempfile = { version = "3", optional = true }

# IOC enrichment (optional)
ureq = { version = "2", optional = true }

# TUI (optional)
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

# Live mode (optional)
notify = { version = "7", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
